[workspace]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
decl_macros = { path = "macros" }
decl_model = { path = "model" }
object = { version = "0.31", default-features = false, features = ["std"] }
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
serde_json = "1.0"
syn = "2.0"
thiserror = "1.0"

[package]
name = "decl"
version.workspace = true
edition.workspace = true

[dependencies]
decl_macros.workspace = true
decl_model.workspace = true
object = { workspace = true, features = ["elf", "read_core"] }
serde_json.workspace = true
thiserror.workspace = true
